--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!--npm init -y --->
     <!-- not rendered will be automatically replaced by react -->
     <div id="root">not rendered</div>
 
-    <script src="https://unpkg.com/react@17.0.1/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@17.0.1/umd/react-dom.development.js"></script>
-    <script src="./app.js"></script>
+    <script src="./App.js"></script>
   </body>
 </html>
